--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "pnpm": ">= 1.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [
     "javascript",
@@ -31,5 +33,11 @@
   "bugs": {
     "url": "https://github.com/akhrienov/javascript-design-patterns/issues"
   },
-  "homepage": "https://github.com/akhrienov/javascript-design-patterns#readme"
+  "homepage": "https://github.com/akhrienov/javascript-design-patterns#readme",
+  "devDependencies": {
+    "@vitest/coverage-v8": "3.0.5",
+    "@vitest/ui": "3.0.5",
+    "prettier": "^3.5.1",
+    "vitest": "^3.0.5"
+  }
 }
