--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Comprehensive implementation of Gang of Four (GoF) design patterns in modern JavaScript, featuring practical examples, tests, and real-world use cases.",
   "author": "Artem Khrienov <artemkhrenov@gmail.com>",
+  "type": "module",
   "engines": {
     "node": ">= 18.0.0",
     "pnpm": ">= 1.0.0"
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@vitest/coverage-v8": "3.0.5",
     "@vitest/ui": "3.0.5",
+    "jsdom": "^26.0.0",
     "prettier": "^3.5.1",
     "vitest": "^3.0.5"
   }
